--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Лесная Гавань</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-home">
   <div class="hero">
@@ -18,6 +18,7 @@
       <a href="place.html" class="btn">Как добраться?</a>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
+
 </html>
