--- a/place.html
+++ b/place.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Как добраться?</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-place">
   <div class="hero2">
     <h1>Как добраться?</h1>
     <p>Адрес загородного комплекса: Калужская обл, Жуковский район, сельское поселение Чубарово, д. Бухловка, ул. Еловая, д. 2</p>
     <p>Как добраться без автомобиля: от метро Теплый Стан на такси или автобусом/маршрутным такси до остановки Бухловка или до эко-отеля Бухлово Парк.</p>
-    <img src="images/pic6.jpg" class="pic" alt="карты">
+    <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="карты">
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
+
 </html>
