--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>О нас</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-about">
   <div class="hero2">
@@ -14,6 +14,7 @@
         отличная кухня и комфортабельное жилье – всё это обеспечит полноценный отдых и восстановит силы 
         гостям клуба.</p>
     </div>
-  <script src="js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
+
 </html>
