--- a/types.html
+++ b/types.html
@@ -4,30 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Наши дома</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-types">
   <div class="hero2">
     <h1>Выбери дом для отдыха</h1>
     <div class="home-grid">
       <div>
-        <img src="images/pic2.jpg" alt="TERRACE LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic2.jpg" alt="TERRACE LODGE">
         <h3>TERRACE LODGE</h3>
         <p>до 2 человек</p>
       </div>
       <div>
-        <img src="images/pic3.jpg" alt="RIVER LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic3.jpg" alt="RIVER LODGE">
         <h3>RIVER LODGE</h3>
         <p>до 3 человек</p>
       </div>
       <div>
-        <img src="images/pic4.jpg" alt="FOREST LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic4.jpg" alt="FOREST LODGE">
         <h3>FOREST LODGE</h3>
         <p>до 4 человек</p>
       </div>
     </div>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
+
 </html>
