--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Лесная Гавань</title>
+  <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-home">
@@ -22,3 +22,4 @@
 </body>
 
 </html>
+
