--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>О нас</title>
+  <title>>О нас — Лесная Гавань: Природа, уют и настоящий отдых</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-about">
   <div class="hero2">
     <h1>О НАС</h1>
-    <p>Загородный комплекс «Лесная гавань» – это всё и сразу!
+    <p>Загородный комплекс «Лесная Гавань» – это всё и сразу!
         Свежий воздух, возможность заниматься активными и даже немного экстремальными видами спорта,
         отличная кухня и комфортабельное жилье – всё это обеспечит полноценный отдых и восстановит силы 
         гостям клуба.</p>
@@ -18,3 +18,4 @@
 </body>
 
 </html>
+
