--- a/types.html
+++ b/types.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Наши дома</title>
+  <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-types">
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
