--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
+    Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
@@ -22,4 +24,5 @@
 </body>
 
 </html>
+
 
