--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Узнайте о Лесной Гавани — загородном комплексе, где вы найдете тишину, природу и комфорт. 
+    Настоящий отдых, восстановление сил и активный досуг для всей семьи." />
   <title>>О нас — Лесная Гавань: Природа, уют и настоящий отдых</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
@@ -18,4 +20,5 @@
 </body>
 
 </html>
+
 
