--- a/types.html
+++ b/types.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Выберите идеальный дом для отдыха в Лесной Гавани. 
+    Все варианты с комфортом, отличной кухней и видами на природу." />
   <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
@@ -32,4 +34,5 @@
 </body>
 
 </html>
+
 
