--- a/place.html
+++ b/place.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Как добраться до Лесной Гавани? Подробная инструкция, карта проезда и советы по маршруту. 
+    Удобный подъезд на машине или общественном транспорте из Москвы и региона." />
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
@@ -18,4 +20,5 @@
 </body>
 
 </html>
+
 
