--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
-  <title>Лесная Гавань - уютные дома для отдыха на природе</title>
+  <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
   <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
 </head>
 <body class="body-home">
   <div class="hero">
-    <h1>ЛЕСНАЯ ГАВАНЬ</h1>
+    <h1>Лесная Гавань — Уютные дома для отдыха в природе</h1>
     <div class="hero-text">
     <p>Тишина. Природа. Настоящий отдых</p>
     </div>
@@ -24,6 +24,7 @@
 </body>
 
 </html>
+
 
 
 
