--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body-home">
   <div class="hero">
-    <h1>Лесная Гавань — Уютные дома для отдыха в природе</h1>
+    <h1>Лесная Гавань — Уютные дома для отдыха на природе</h1>
     <div class="hero-text">
     <p>Тишина. Природа. Настоящий отдых</p>
     </div>
@@ -24,6 +24,7 @@
 </body>
 
 </html>
+
 
 
 
