--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body-place">
   <div class="hero2">
-    <h1>Как добраться?</h1>
+    <h1>Как добраться — Лесная Гавань: Адрес и маршрут</h1>
     <p>Адрес загородного комплекса: Калужская обл, Жуковский район, сельское поселение Чубарово, д. Бухловка, ул. Еловая, д. 2</p>
     <p>Как добраться без автомобиля: от метро Теплый Стан на такси или автобусом/маршрутным такси до остановки Бухловка или до эко-отеля Бухлово Парк.</p>
     <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="карты">
@@ -20,5 +20,6 @@
 </body>
 
 </html>
+
 
 
