--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body-about">
   <div class="hero2">
-    <h1>О нас — Лесная Гавань: забота о Вашем отдыхе</h1>
+    <h1>О нас — Лесная Гавань: Забота о Вашем отдыхе</h1>
     <p>Загородный комплекс «Лесная Гавань» – это всё и сразу!
         Свежий воздух, возможность заниматься активными и даже немного экстремальными видами спорта,
         отличная кухня и комфортабельное жилье – всё это обеспечит полноценный отдых и восстановит силы 
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
