--- a/types.html
+++ b/types.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body-types">
   <div class="hero2">
-    <h1>Выбери дом для отдыха</h1>
+    <h1>Выбрать дом — Лесная Гавань: Варианты размещения</h1>
     <div class="home-grid">
       <div>
         <img src="https://sdaria111.github.io/gavan2/images/pic2.jpg" alt="TERRACE LODGE">
@@ -34,5 +34,6 @@
 </body>
 
 </html>
+
 
 
