--- a/place.html
+++ b/place.html
@@ -13,13 +13,14 @@
     <h1>Адрес и маршрут</h1>
     <p>Адрес загородного комплекса: Калужская обл, Жуковский район, сельское поселение Чубарово, д. Бухловка, ул. Еловая, д. 2</p>
     <p>Как добраться без автомобиля: от метро Теплый Стан на такси или автобусом/маршрутным такси до остановки Бухловка или до эко-отеля Бухлово Парк.</p>
-    <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="карты">
+    <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="Карта Калужской области с адресом комплекса">
   </div>
 
   <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
 
 </html>
+
 
 
 
