--- a/types.html
+++ b/types.html
@@ -13,17 +13,17 @@
     <h1>Варианты размещения</h1>
     <div class="home-grid">
       <div>
-        <img src="https://sdaria111.github.io/gavan2/images/pic2.jpg" alt="TERRACE LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic2.jpg" alt="Белый дом с панорамными окнами и террасой terrace lodge">
         <h3>TERRACE LODGE</h3>
         <p>до 2 человек</p>
       </div>
       <div>
-        <img src="https://sdaria111.github.io/gavan2/images/pic3.jpg" alt="RIVER LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic3.jpg" alt="Дом из темного дерева с панорамными окнами и террасой river lodge">
         <h3>RIVER LODGE</h3>
         <p>до 3 человек</p>
       </div>
       <div>
-        <img src="https://sdaria111.github.io/gavan2/images/pic4.jpg" alt="FOREST LODGE">
+        <img src="https://sdaria111.github.io/gavan2/images/pic4.jpg" alt="Дом из светлого дерева с панорамными окнами и террасой forest lodge">
         <h3>FOREST LODGE</h3>
         <p>до 4 человек</p>
       </div>
@@ -34,6 +34,7 @@
 </body>
 
 </html>
+
 
 
 
