--- a/place.html
+++ b/place.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
   <meta name="description" content="Как добраться до Лесной Гавани? Подробная инструкция, карта проезда и советы по маршруту. 
     Удобный подъезд на машине или общественном транспорте из Москвы и региона." />
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
