--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
   <meta name="description" content="Узнайте о Лесной Гавани — загородном комплексе, где вы найдете тишину, природу и комфорт. 
     Настоящий отдых, восстановление сил и активный досуг для всей семьи." />
   <title>>О нас — Лесная Гавань: Природа, уют и настоящий отдых</title>
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
