--- a/types.html
+++ b/types.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
   <meta name="description" content="Выберите идеальный дом для отдыха в Лесной Гавани. 
     Все варианты с комфортом, отличной кухней и видами на природу." />
   <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
@@ -34,6 +34,7 @@
 </body>
 
 </html>
+
 
 
 
