--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
 <body class="body-home">
   <div class="hero">
@@ -20,10 +21,11 @@
       <a href="place.html" class="btn">Как добраться?</a>
     </div>
   </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
 </body>
 
 </html>
+
 
 
 
