--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Узнайте о Лесной Гавани — загородном комплексе, где вы найдете тишину, природу и комфорт. 
     Настоящий отдых, восстановление сил и активный досуг для всей семьи." />
   <title>>О нас — Лесная Гавань: Природа, уют и настоящий отдых</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
 <body class="body-about">
   <div class="hero2">
@@ -16,10 +17,11 @@
         отличная кухня и комфортабельное жилье – всё это обеспечит полноценный отдых и восстановит силы 
         гостям клуба.</p>
     </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
 </body>
 
 </html>
+
 
 
 
