--- a/place.html
+++ b/place.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Как добраться до Лесной Гавани? Подробная инструкция, карта проезда и советы по маршруту. 
     Удобный подъезд на машине или общественном транспорте из Москвы и региона." />
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
 <body class="body-place">
   <div class="hero2">
@@ -16,10 +17,11 @@
     <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="Карта Калужской области с адресом комплекса">
   </div>
 
-  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
 </body>
 
 </html>
+
 
 
 
