--- a/types.html
+++ b/types.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Выберите идеальный дом для отдыха в Лесной Гавани. 
     Все варианты с комфортом, отличной кухней и видами на природу." />
   <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css" />
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
 <body class="body-types">
   <div class="hero2">
@@ -30,10 +31,11 @@
     </div>
   </div>
 
-  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
 </body>
 
 </html>
+
 
 
 
