--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
     </div>
   </div>
   <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
+  <script>
+    // Искусственная задержка
+    for (let i = 0; i < 10000000; i++) {}
+  </script>
 </body>
 
 </html>
+
 
 
 
