--- a/place.html
+++ b/place.html
@@ -16,11 +16,15 @@
     <p>Как добраться без автомобиля: от метро Теплый Стан на такси или автобусом/маршрутным такси до остановки Бухловка или до эко-отеля Бухлово Парк.</p>
     <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="Карта Калужской области с адресом комплекса">
   </div>
-
   <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
+  <script>
+    // Искусственная задержка
+    for (let i = 0; i < 10000000; i++) {}
+  </script>
 </body>
 
 </html>
+
 
 
 
