--- a/about.html
+++ b/about.html
@@ -18,9 +18,14 @@
         гостям клуба.</p>
     </div>
   <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
+  <script>
+    // Искусственная задержка
+    for (let i = 0; i < 10000000; i++) {}
+  </script>
 </body>
 
 </html>
+
 
 
 
