--- a/types.html
+++ b/types.html
@@ -30,11 +30,15 @@
       </div>
     </div>
   </div>
-
   <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
+  <script>
+    // Искусственная задержка
+    for (let i = 0; i < 10000000; i++) {}
+  </script>
 </body>
 
 </html>
+
 
 
 
