--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
 </head>
 <body class="body-home">
   <div class="hero">
@@ -29,6 +30,7 @@
 </body>
 
 </html>
+
 
 
 
