--- a/place.html
+++ b/place.html
@@ -8,6 +8,7 @@
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
 </head>
 <body class="body-place">
   <div class="hero2">
@@ -24,6 +25,7 @@
 </body>
 
 </html>
+
 
 
 
