--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
-  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="style.css"></noscript>
-  <title></title>
-  <meta name="description" content="" />
-
-  <!-- Огромный, блокирующий, дублирующийся CSS -->
-  <style>
-    body { margin: 0; padding: 0; font-family: Arial; background: #fff; color: #777; } /* низкий контраст */
-    .hero { padding: 100vh 0; text-align: center; }
-    h1 { font-size: 2.5rem; }
-    /* Повторим это 500 раз, чтобы имитировать "тяжелый" CSS */
-    /* ... (представьте 500 дублирующих правил) ... */
-  </style>
 </head>
 <body class="body-home">
   <div class="hero">
@@ -32,24 +19,11 @@
       <a href="place.html" class="btn">Как добраться?</a>
     </div>
   </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
-  <script>
-    // Тяжелая синхронная работа
-    while (performance.now() < 5000) {}
-    
-    // Много мусорных ошибок
-    someUndefinedFunction(); // ReferenceError
-    
-    // Динамическое внедрение сдвигающего контента
-    setTimeout(() => {
-      const ad = document.createElement('div');
-      ad.style.cssText = 'height: 200px; background: red; position: absolute; top: 0; left: 0;';
-      document.body.appendChild(ad);
-    }, 1000);
-  </script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js" ></script>
 </body>
 
 </html>
+
 
 
 
