--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0/>
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
 </head>
 <body class="body-home">
   <div class="hero">
@@ -23,6 +24,7 @@
 </body>
 
 </html>
+
 
 
 
