--- a/about.html
+++ b/about.html
@@ -2,13 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Узнайте о Лесной Гавани — загородном комплексе, где вы найдете тишину, природу и комфорт. 
     Настоящий отдых, восстановление сил и активный досуг для всей семьи." />
   <title>>О нас — Лесная Гавань: Природа, уют и настоящий отдых</title>
-  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="style.css"></noscript>
-  <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
 </head>
 <body class="body-about">
   <div class="hero2">
@@ -18,14 +16,11 @@
         отличная кухня и комфортабельное жилье – всё это обеспечит полноценный отдых и восстановит силы 
         гостям клуба.</p>
     </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
-  <script>
-    // Искусственная задержка
-    for (let i = 0; i < 10000000; i++) {}
-  </script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
 
 </html>
+
 
 
 
