--- a/place.html
+++ b/place.html
@@ -2,13 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Как добраться до Лесной Гавани? Подробная инструкция, карта проезда и советы по маршруту. 
     Удобный подъезд на машине или общественном транспорте из Москвы и региона." />
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
-  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="style.css"></noscript>
-  <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
 </head>
 <body class="body-place">
   <div class="hero2">
@@ -17,14 +15,11 @@
     <p>Как добраться без автомобиля: от метро Теплый Стан на такси или автобусом/маршрутным такси до остановки Бухловка или до эко-отеля Бухлово Парк.</p>
     <img src="https://sdaria111.github.io/gavan2/images/pic6.jpg" class="pic" alt="Карта Калужской области с адресом комплекса">
   </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
-  <script>
-    // Искусственная задержка
-    for (let i = 0; i < 10000000; i++) {}
-  </script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
 
 </html>
+
 
 
 
