--- a/types.html
+++ b/types.html
@@ -2,12 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Выберите идеальный дом для отдыха в Лесной Гавани. 
     Все варианты с комфортом, отличной кухней и видами на природу." />
   <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
-  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
   <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
 </head>
 <body class="body-types">
@@ -31,14 +30,11 @@
       </div>
     </div>
   </div>
-  <script src="https://sdaria111.github.io/gavan2/js/main.js" defer></script>
-  <script>
-    // Искусственная задержка
-    for (let i = 0; i < 10000000; i++) {}
-  </script>
+  <script src="https://sdaria111.github.io/gavan2/js/main.js"></script>
 </body>
 
 </html>
+
 
 
 
