--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css"/>
 </head>
 <body class="body-home">
   <div class="hero">
@@ -24,6 +24,7 @@
 </body>
 
 </html>
+
 
 
 
