--- a/place.html
+++ b/place.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Как добраться до Лесной Гавани? Подробная инструкция, карта проезда и советы по маршруту. 
     Удобный подъезд на машине или общественном транспорте из Москвы и региона." />
   <title>Как добраться? — Лесная Гавань: Инструкция и карта проезда</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css"/>
 </head>
 <body class="body-place">
   <div class="hero2">
@@ -19,6 +19,7 @@
 </body>
 
 </html>
+
 
 
 
