--- a/types.html
+++ b/types.html
@@ -6,8 +6,7 @@
   <meta name="description" content="Выберите идеальный дом для отдыха в Лесной Гавани. 
     Все варианты с комфортом, отличной кухней и видами на природу." />
   <title>Выбрать дом — Лесная Гавань: Варианты размещения для отдыха</title>
-  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style/css"/>
-  <link rel="stylesheet" href="data:text/css,/*{%20repeat%20this%2050000%20times%20*/%20body%20{color:%20black;}%20/*%20end%20*/">
+  <link rel="stylesheet" href="https://sdaria111.github.io/gavan2/css/style.css"/>
 </head>
 <body class="body-types">
   <div class="hero2">
@@ -34,6 +33,7 @@
 </body>
 
 </html>
+
 
 
 
