--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="yandex-verification" content="139420d39f71d94b" />
   <meta name="description" content="Лесная Гавань — уютные дома для отдыха в живописной природе. 
     Тишина, свежий воздух и настоящий отдых. Выберите дом и забронируйте прямо сейчас!" />
   <title>Лесная Гавань - уютные и комфортные дома для отдыха на природе</title>
@@ -24,6 +25,7 @@
 </body>
 
 </html>
+
 
 
 
